Fix up notification item translation strings

--- a/lineman/app/modules/navbar/notification_items/comment_liked.haml
+++ b/lineman/app/modules/navbar/notification_items/comment_liked.haml
@@ -2,6 +2,4 @@
   .media-left
     %user_avatar{user: "actor"}
   .media-body
-    %span> {{ actor.name }}
-    %span{translate:  "notifications.comment_liked" }>
-    %span> {{ event.discussion().title }}
+    %span{translate: 'notifications.comment_liked', translate-value-name: '{{actor.name}}', translate-value-discussion: '{{event.discussion().title}}' }
