--- a/lineman/app/modules/navbar/notification_items/comment_replied_to.haml
+++ b/lineman/app/modules/navbar/notification_items/comment_replied_to.haml
@@ -2,4 +2,4 @@
   .media-left
     %user_avatar{user: "actor"}
   .media-body
-    %span{translate: 'notifications.comment_replied_to', translate-value-name: '{{actor.name}}', translate-value-title: '{{event.discussion().title}}' }
+    %span{translate: 'notifications.comment_replied_to', translate-value-name: '{{actor.name}}', translate-value-discussion: '{{event.discussion().title}}' }
