--- a/lineman/app/modules/navbar/notification_items/membership_requested.haml
+++ b/lineman/app/modules/navbar/notification_items/membership_requested.haml
@@ -1,13 +1,5 @@
 %a.selector-list-item-link{ng-href: '{{event.link()}}'}
-  -#requestor: {{ notification.event().membershipRequest().requestor() }}
-    -#user by that id?: {{ notification.event().membershipRequest().requestorId }}
-  -#.a{ng-if: "!notification.event().membershipRequest().requestorId"}
-    -#anon request: {{notification.event().membershipRequest().name}}
-  -#{{ ::notification.event().membershipRequest().actor() }}
   .media-left
     %user_avatar{user: "event.membershipRequest().actor()", ng-if: "event.membershipRequest().byExistingUser()"}
   .media-body
-    %span> {{ event.membershipRequest().actor().name }}
-    %span{translate:  "notifications.membership_requested" }>
-    %span> {{ event.membershipRequest().group().fullName() }}
-
+    %span{translate: 'notifications.membership_requested', translate-value-name: '{{event.membershipRequest().actor().name}}', translate-value-group: '{{event.membershipRequest().group().fullName()}}' }
