--- a/lineman/app/modules/navbar/notification_items/membership_request_approved.haml
+++ b/lineman/app/modules/navbar/notification_items/membership_request_approved.haml
@@ -2,7 +2,4 @@
   .media-left
     %user_avatar{user: "actor"}
   .media-body
-    %span> {{ actor.name }}
-    %span{translate:  "notifications.membership_request_approved" }>
-    %span> {{ event.group().title }}
-
+    %span{translate: 'notifications.membership_request_approved', translate-value-name: '{{actor.name}}', translate-value-title: '{{event.group().name}}' }
