--- a/lineman/app/modules/navbar/notification_items/motion_closing_soon.haml
+++ b/lineman/app/modules/navbar/notification_items/motion_closing_soon.haml
@@ -2,5 +2,4 @@
   .media-left
     .thread-event-proposal-icon
   .media-body
-    %span{translate:  "notifications.motion_closing_soon" }>
-    %span> {{ event.proposal().name }}
+    %span{translate: 'notifications.motion_closing_soon', translate-value-proposal: '{{event.proposal().name}}' }
