--- a/lineman/app/modules/navbar/notification_items/user_added_to_group.haml
+++ b/lineman/app/modules/navbar/notification_items/user_added_to_group.haml
@@ -2,6 +2,4 @@
   .media-left
     %user_avatar{user: "event.actor()"}
   .media-body
-    %span> actor.name }}
-    %span{translate:  "notifications.user_added_to_group" }>
-    %span> {{ event.group().name }}
+    %span{translate: 'notifications.user_added_to_group', translate-value-name: '{{actor.name}}', translate-value-title: '{{event.group().name}}' }
