--- a/lineman/app/modules/discussion_page/discussion_items/new_comment.haml
+++ b/lineman/app/modules/discussion_page/discussion_items/new_comment.haml
@@ -18,8 +18,7 @@
 
   .thread-attachments
     .thread-attachment{ng-repeat: 'attachment in comment.attachments()'}
-      %a{ng-href: '{{attachment.location}}', target: '_blank'}
-        {{::attachment.filename }}
+      %attachment{attachment: 'attachment'}
 
   .thread-event-footer
     .thread-actions-and-meta
