--- a/lineman/app/modules/navbar/navbar_search.haml
+++ b/lineman/app/modules/navbar/navbar_search.haml
@@ -3,12 +3,27 @@
     %i.fa.fa-lg.fa-fw.fa-search
   .dropdown-menu.loomio-nav-dropdown#search-dropdown{role: 'menu'}
     .navbar-search-input
-      %input.form-control{ng-click: '$event.stopPropagation()', ng-model: 'query', placeholder: "{{ 'navbar.search_placeholder' | translate }}"}
+      %input.form-control{ng-click: '$event.stopPropagation()', ng-model: 'query', ng-change: 'getSearchResults(query)', ng-model-options: "{debounce: 300}", placeholder: "{{ 'navbar.search.placeholder' | translate }}"}
     %ul.selector-list
-      %li.selector-list-header
+      %li.selector-list-header{ng-show: '(availableGroups() | filter: { name: query }).length > 0'}
         %h3{translate: "common.groups"}
       %li.selector-list-item.media{ng_repeat: 'group in availableGroups() | filter: { name: query } | orderBy: "fullName()"', class: 'is-subgroup-{{group.parentId != null}}'}
         %a.selector-list-item-link{href: '/g/{{group.key}}'}
           .media-left
             %img.selector-list-item-group-logo{src: "{{group.logoUrl()}}"}
           .selector-list-item-group-name.media-body {{group.fullName()}}
+      %li.selector-list-item.search-loading{ng-show: 'searching', translate: 'navbar.search.loading'}
+      %li.selector-list-item.no-results-found{ng-show: 'noResultsFound()', translate: 'navbar.search.no_results'}
+      %div{ng-hide: 'searching || noResultsFound()'}
+        %li.selector-list-header{ng-show: 'discussions.length > 0'}
+          %h3{translate: "navbar.search.discussions"}
+        %li.selector-list-item.media{ng-hide: 'searching', ng-repeat: 'searchResult in discussions | orderBy: "priority"'}
+          %navbar_search_discussion{discussion: 'searchResult.result()'}
+        %li.selector-list-header{ng-show: 'proposals.length > 0'}
+          %h3{translate: "navbar.search.proposals"}
+        %li.selector-list-item.media{ng-hide: 'searching', ng-repeat: 'searchResult in proposals | orderBy: "priority"'}
+          %navbar_search_proposal{proposal: 'searchResult.result()'}
+        %li.selector-list-header{ng-show: 'comments.length > 0'}
+          %h3{translate: "navbar.search.comments"}
+        %li.selector-list-item.media{ng-hide: 'searching', ng-repeat: 'searchResult in comments | orderBy: "priority"'}
+          %navbar_search_comment{comment: 'searchResult.result()'}
