--- a/app/assets/stylesheets/unstructured/_icons.scss
+++ b/app/assets/stylesheets/unstructured/_icons.scss
@@ -36,7 +36,7 @@
   float: left;
   display: block;
   height: 18px;
-  /*margin-right: 0.4em;*/
+  margin-right: 0.4em;
   width: 18px;
   &.discussion-icon { background-image: image-url('discussion-18.png'); }
   &.loomio-icon { background-image: image-url('topic-18.png'); }
